fix horizontal scroll

--- a/app/style/style.scss
+++ b/app/style/style.scss
@@ -70,6 +70,7 @@ main {
   .generation-info {
     .row {
       display: flex;
+      width: 100%;
       padding: 0;
       .image-container {
         width: 70%;
